# mav_voxblox_planning

./: README.md  mgv_local_planner.cpp  mgv_local_planner.h
catkin_simple/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mav_comm/share/mav_comm/: package.bash  (+4 more)
mav_trajectory_generation/mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation/mav_trajectory_generation/src/: io.cpp  motion_defines_mgv.cpp  polynomial_mgv.cpp  polynomial_timing_evaluation.cpp  segment_mgv.cpp  timing_mgv.cpp  trajectory_mgv.cpp  trajectory_sampling.cpp  trajectory_sampling_mgv.cpp  vertex.cpp  vertex_mgv.cpp
mav_trajectory_generation/mav_trajectory_generation/test/: test_polynomial.cpp  test_polynomial_optimization.cpp
mav_trajectory_generation/mav_trajectory_generation_example/: package.xml
mav_trajectory_generation/mav_trajectory_generation_ros/src/: input_constraints.cpp
mav_voxblox_planning/loco_planner/: CMakeLists.txt  package.xml
mav_voxblox_planning/loco_planner/src/: loco_main.cpp  loco_main_mgv.cpp
mav_voxblox_planning/loco_planner/test/: test_loco.cpp
mav_voxblox_planning/mav_local_planner/: CMakeLists.txt
mav_voxblox_planning/mav_local_planner/include/mav_local_planner/: mav_local_planner.h
mav_voxblox_planning/mav_local_planner/launch/: firefly_sim.launch
mav_voxblox_planning/mav_local_planner/src/: mav_local_planner.cpp  mav_local_planner_node.cpp
mav_voxblox_planning/mav_path_smoothing/: CMakeLists.txt  package.xml
mav_voxblox_planning/mav_path_smoothing/include/mav_path_smoothing/: loco_smoother_mgv.h  path_smoother_base_mgv.h  polynomial_smoother_mgv.h  velocity_ramp_smoother_mgv.h
mav_voxblox_planning/mav_path_smoothing/src/: loco_smoother.cpp  loco_smoother_mgv.cpp  path_smoother_base_mgv.cpp  polynomial_smoother.cpp  polynomial_smoother_mgv.cpp  velocity_ramp_smoother_mgv.cpp
mav_voxblox_planning/mav_planning_benchmark/: CMakeLists.txt  package.xml
mav_voxblox_planning/mav_planning_common/: CMakeLists.txt  package.xml
mav_voxblox_planning/mav_planning_common/src/: path_visualization.cpp  visibility_resampling.cpp  visibility_resampling_mgv.cpp  yaw_policy_mgv.cpp
mav_voxblox_planning/mav_planning_rviz/: CMakeLists.txt
mav_voxblox_planning/mav_planning_rviz/src/: planning_panel.cpp
mav_voxblox_planning/mav_voxblox_planning/: CMakeLists.txt
mav_voxblox_planning/mgv_local_planner/: CMakeLists.txt  package.xml
mav_voxblox_planning/mgv_local_planner/include/mgv_local_planner/: mgv_local_planner.h
mav_voxblox_planning/mgv_local_planner/src/: mgv_local_planner.cpp  mgv_local_planner_node.cpp
mav_voxblox_planning/voxblox_planning_common/src/: gain_evaluator.cpp
mav_voxblox_planning/voxblox_rrt_planner/: CMakeLists.txt  package.xml
mav_voxblox_planning/voxblox_rrt_planner/launch/: rrt_saved_map.launch
mav_voxblox_planning/voxblox_skeleton/: CMakeLists.txt
mav_voxblox_planning/voxblox_skeleton_planner/: CMakeLists.txt
mgv_comm/mgv_comm/: CMakeLists.txt  package.xml
mgv_comm/mgv_msgs/: CMakeLists.txt  package.xml
mgv_comm/mgv_planning_msgs/: CMakeLists.txt  package.xml
mgv_comm/mgv_state_machine_msgs/: CMakeLists.txt  package.xml
mgv_comm/mgv_system_msgs/: CMakeLists.txt  package.xml
protobuf_catkin/: unused_parameter_warnings.patchZone.Identifier
(+190 files in other folders)
