<?xml version="1.0"?>
<package format="2">
  <name>mgv_local_planner</name>
  <version>0.0.0</version>
  <description>The mgv_local_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="quinton@todo.todo">quinton</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_loco_planner</depend>
  <depend>voxblox_ros</depend>

  <exec_depend>mav_nonlinear_mpc</exec_depend>
  <exec_depend>mav_lowlevel_attitude_controller</exec_depend>
  <exec_depend>mav_planning_rviz</exec_depend>
</package>
